<resources>
    <string name="app_name">PastPapersKenya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_moto">Revision Made Easy</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="already_have_account">Already have an Account</string>
    <string name="skip_login">Skip</string>
    <string name="forgot_password">Forgot Pasword</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="facebook_cap">Login with Facebook</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="no_more_results">No more results...</string>
    <string name="account_info">Account Info</string>


    <string name="facebook_app_id">198294105088316</string>
    <string name="fb_login_protocol_scheme">fb198294105088316</string>
    <string name="facebook_client_token">20128624fd79b02a7b7d11333bab4c0d</string>

    <string name="follow">Follow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="downloads">Downloads</string>
    <string name="profile">Profile</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_error">Error</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="category_text_placeholder">Category</string>
    <string name="logout">Logout</string>
    <string name="country">Country</string>
    <string name="county">County</string>
    <string name="save">Save and Proceed</string>
    <string name="mpesa_phone_no">0700000000</string>
    <string name="billing_phone_no">Mpesa Enabled Contact</string>
    <string name="changePassword">Change Password</string>
    <string name="your_web_client_id">346798231053-ia551409ra0l115k2kn9h09cg080nhci.apps.googleusercontent.com</string>
    <string name="download">Download</string>

    <string name="download_eta_sec" translatable="false">%1$ds left</string>
    <string name="download_eta_min" translatable="false">%1$dm %2$ds left</string>
    <string name="download_eta_hrs" translatable="false">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes" translatable="false">%1$d B/s</string>
    <string name="download_speed_kb" translatable="false">%1$s KB/s</string>
    <string name="download_speed_mb" translatable="false">%1$s MB/s</string>

    <string name="pause" translatable="false">PAUSE</string>
    <string name="resume" translatable="false">RESUME</string>
    <string name="start" translatable="false">START</string>
    <string name="view" translatable="false">VIEW</string>
    <string name="failed_msg" translatable="false">FAILED</string>
    <string name="pref_notification">Notification</string>
    <string name="product_not_available">Product not available</string>
    <string name="text_placeholder">Place Holder text</string>
    <string name="ratings_and_reviews_underline">Ratings and Reviews</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="related_products">Related Products</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="discount">Discount</string>
    <string name="buy">Buy Now</string>
    <string name="product_price">Price</string>
    <string name="subtotal_price">Sub total</string>
    <string name="order_detail">Order Details</string>
    <string name="order_status_pending">Order Status</string>
    <string name="payment_via">Payment made via</string>
    <string name="order_price">Order Price</string>
    <string name="no_of_products">No of Products</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="products">Products</string>
    <string name="order_status">Order Status</string>
    <string name="order_detail_id">Order Details Id</string>
    <string name="billing_address">Billing Adress</string>
    <string name="save_proceed">Save and Proceed</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="payment_total">Payment Total</string>
    <string name="regularPrice">Regular price</string>
    <string name="salePrice">Sale Price</string>
    <string name="payment_title_card">Card</string>
    <string name="empty_cart">You have no items in your shopping cart.\n Lets go buy something!</string>
    <string name="price">Price</string>
    <string name="pay_amount_text">Pay Amount</string>
    <string name="downloads_available">Downloads Available</string>
    <string name="myDownloads">My Downloads</string>
    <string name="thanks_for_order">Success. Thank you !!!</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_failed">Order Failed</string>
    <string name="payment_not_successful">Payment Not Successful</string>

    <string-array name="counties">
        <item>Mombasa</item>
        <item>Kwale</item>
        <item>Kilifi</item>
        <item>Tana River</item>
        <item>Lamu</item>
        <item>Taita Taveta</item>
        <item>Garissa</item>
        <item>Wajir</item>
        <item>Mandera</item>
        <item>Marsabit</item>
        <item>Isiolo</item>
        <item>Meru</item>
        <item>Tharaka-Nithi</item>
        <item>Embu</item>
        <item>Kitui</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Kirinyaga</item>
        <item>Muranga</item>
        <item>Kiambu</item>
        <item>Turkana</item>
        <item>West Pokot</item>
        <item>Samburu</item>
        <item>Trans Nzoia</item>
        <item>Uasin Gishu</item>
        <item>Elgeyo Markwet</item>
        <item>Nandi</item>
        <item>Baringo</item>
        <item>Laikipia</item>
        <item>Nakuru</item>
        <item>Narok</item>
        <item>Kajiado</item>
        <item>Kericho</item>
        <item>Bomet</item>
        <item>Kakamega</item>
        <item>Vihiga</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Siaya</item>
        <item>Kisumu</item>
        <item>Homa Bay</item>
        <item>Migori</item>
        <item>Kisii</item>
        <item>Nyamira</item>
        <item>Nairobi</item>

    </string-array>

</resources>