<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/size_10dp">

    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
        android:id="@+id/product_title"
        android:layout_width="@dimen/size_120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_5dp"
        android:paddingBottom="@dimen/size_5dp"
        android:text="@string/text_placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/productImage"
        android:layout_width="@dimen/size_120dp"
        android:layout_height="@dimen/size_120dp"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_1dp"
        android:orientation="horizontal">

        <com.pastpaperskenya.app.business.util.customview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/text_13sp"
            android:textStyle="bold" />

        <com.pastpaperskenya.app.business.util.customview.RobotoTextView
            android:id="@+id/product_sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            android:text="@string/text_placeholder"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_1dp"
        android:orientation="horizontal">

        <com.pastpaperskenya.app.business.util.customview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/text_13sp"
            android:textStyle="bold" />

        <com.pastpaperskenya.app.business.util.customview.RobotoTextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            android:text="@string/text_placeholder"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_15sp" />

    </LinearLayout>

</LinearLayout>
