<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_7dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/size_0dp"
        app:cardElevation="@dimen/size_3dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayExtraLight"
                android:orientation="horizontal"
                android:padding="@dimen/size_7dp">

                <com.pastpaperskenya.app.business.util.customview.NeoSansProTextView
                    android:id="@+id/order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/text_placeholder"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                    android:id="@+id/order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/size_5dp"
                    android:gravity="center"
                    android:textSize="@dimen/text_14sp"
                    android:text="@string/text_placeholder" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_7dp"
                    android:layout_marginBottom="@dimen/size_7dp">

                    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/size_7dp"
                        android:textSize="@dimen/text_14sp"
                        android:layout_toStartOf="@+id/total_num_product"
                        android:text="@string/no_of_products" />

                    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                        android:id="@+id/total_num_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/size_10dp"
                        android:layout_marginEnd="@dimen/size_10dp"
                        android:text="@string/text_placeholder"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/colorBlack" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_7dp">

                    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/size_7dp"
                        android:layout_toStartOf="@+id/payment_amount"
                        android:textSize="@dimen/text_14sp"
                        android:text="@string/order_price" />

                    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                        android:id="@+id/payment_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/size_10dp"
                        android:layout_marginEnd="@dimen/size_10dp"
                        android:text="@string/text_placeholder"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/colorBlack" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_7dp">

                    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/size_7dp"
                        android:layout_toStartOf="@+id/payment_method"
                        android:textSize="@dimen/text_14sp"
                        android:text="@string/payment_via" />

                    <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                        android:id="@+id/payment_method"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/size_10dp"
                        android:layout_marginEnd="@dimen/size_10dp"
                        android:text="@string/text_placeholder"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/colorBlack" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayExtraLight"
                android:orientation="horizontal"
                android:padding="@dimen/size_7dp">

                <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                    android:id="@+id/order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/bg_status_pending"
                    android:paddingStart="@dimen/size_7dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:paddingEnd="@dimen/size_10dp"
                    android:paddingBottom="@dimen/size_5dp"
                    android:text="@string/order_status_pending"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/colorWhite" />

                <com.pastpaperskenya.app.business.util.customview.RobotoTextView
                    android:id="@+id/order_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_accent"
                    android:gravity="center"
                    android:paddingStart="@dimen/size_10dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:paddingEnd="@dimen/size_10dp"
                    android:paddingBottom="@dimen/size_5dp"
                    android:text="@string/order_detail"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
